test/expected/dynamic_cast_pi.out
dynamic cast x into pointer to int
                    ^
21: error: invalid dynamic_cast type "pointer to integer"; must be a pointer or reference to a class, struct, or union
